--- a/tic-tac-toe-web/index.html
+++ b/tic-tac-toe-web/index.html
@@ -8,18 +8,39 @@
 <body>
   <h1>Smart Tic Tac Toe</h1>
 
-  <label><input type="checkbox" id="aiToggle"> Play vs AI</label>
+  <div class="controls">
+    <label><input type="checkbox" id="aiToggle"> Play vs AI</label>
+    <label><input type="checkbox" id="darkModeToggle"> Dark Mode</label>
+  </div>
+
+  <div class="player-inputs">
+    <label for="playerXName">Player X Name:</label>
+    <input type="text" id="playerXName" placeholder="Player X">
+    <label for="playerOName">Player O Name:</label>
+    <input type="text" id="playerOName" placeholder="Player O">
+  </div>
+
+  <div class="scoreboard">
+    <span id="playerXDisplay">Player X</span>: <span id="playerXScore">0</span> -
+    <span id="playerODisplay">Player O</span>: <span id="playerOScore">0</span>
+  </div>
 
   <div class="board" id="board"></div>
   <p id="status">Player X's Turn</p>
   <button onclick="resetGame()">Reset</button>
 
-  <!-- Sound Effects -->
   <audio id="clickSound" src="sounds/click.mp3"></audio>
   <audio id="winSound" src="sounds/win.mp3"></audio>
   <audio id="drawSound" src="sounds/draw.mp3"></audio>
   <audio id="resetSound" src="sounds/reset.mp3"></audio>
 
   <script src="script.js"></script>
+  <script>
+    // Dark Mode Toggle Logic
+    const darkModeToggle = document.getElementById("darkModeToggle");
+    darkModeToggle.addEventListener("change", () => {
+      document.body.classList.toggle("dark-mode");
+    });
+  </script>
 </body>
 </html>
